--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   "author": "Ilhan Ozkan",
   "license": "ISC",
   "dependencies": {
+    "apollo-datasource-rest": "^3.7.0",
     "apollo-server": "^3.10.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
